Connect GAIA funnel to cloud storage
